<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nossaequipe"
            android:icon="@drawable/profile"
            android:title="@string/nossaequipe" />
        <item
            android:id="@+id/mapa"
            android:icon="@drawable/map"
            android:title="@string/map" />
        <item
            android:id="@+id/sobre"
            android:icon="@drawable/about"
            android:title="@string/sobre" />


    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/telefone"
                android:icon="@drawable/phone"
                android:title="@string/phone" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/internet"
                android:title="@string/web" />
        </menu>
    </item>

</menu>
